WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162935
Fix a typo in WebBackForwardListItem (highed->highest)
https://bugs.webkit.org/show_bug.cgi?id=162935
Summary
Fix a typo in WebBackForwardListItem (highed->highest)
Tim Horton
Reported
2016-10-04 14:05:05 PDT
Fix a typo in WebBackForwardListItem (highed->highest)
Attachments
Patch
(3.02 KB, patch)
2016-10-04 14:05 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-10-04 14:05:25 PDT
Created
attachment 290641
[details]
Patch
Tim Horton
Comment 2
2016-10-04 14:11:37 PDT
https://trac.webkit.org/changeset/206781
Csaba Osztrogonác
Comment 3
2016-10-04 14:17:49 PDT
(In reply to
comment #2
)
>
https://trac.webkit.org/changeset/206781
It broke the buikd everywhere, see build.webkit.org for details.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug