Fix a typo in WebBackForwardListItem (highed->highest) https://bugs.webkit.org/show_bug.cgi?id=162935

Reviewed by Anders Carlsson.

* Shared/WebBackForwardListItem.cpp:
(WebKit::WebBackForwardListItem::highestUsedItemID):
(WebKit::WebBackForwardListItem::highedUsedItemID): Deleted.
* Shared/WebBackForwardListItem.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):


Canonical link: https://commits.webkit.org/180838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206781 268f45cc-cd09-0410-ab3c-d52691b4dbfc